<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#b42daf1a"
    >


<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radioGroup">

    <RadioButton
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/white_alliance"
        android:text="@string/white"
        android:onClick="radiobuttonSTATUS"
        android:textColor="#115cff"
        android:checked="false" />

    <RadioButton
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/black_alliance"
        android:text="@string/dark"
        android:onClick="radiobuttonSTATUS"
        android:textColor="#ff190a"
        android:layout_below="@+id/radioGroup"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_marginLeft="0dp" />
</RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WarriorName"
        android:inputType="none"
        android:hint="@string/EnterWARNAME"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_info"
        android:id="@+id/save_info"
        android:background="#21b3ff"
        android:layout_above="@+id/WarriorName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_marginTop="1dp"/>

    <Spinner
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:id="@+id/Warriorspecies"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/WarriorName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <Spinner
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:id="@+id/Lastplanet"
        android:spinnerMode="dropdown"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />

    <Spinner
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:id="@+id/Gender"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="240dp"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/textView3"
        android:textColor="#000000"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button1"
        android:layout_toStartOf="@+id/button1"
        android:text="@string/lastspot"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/date_button_set"
        android:id="@+id/button1"
        android:onClick="setDate"
        android:background="#21b3ff"
        android:layout_marginBottom="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>