<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/listwaraaiance"
        android:id="@+id/warName_list"
        android:textColor="#000000"
        android:singleLine="false"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/counter"
        android:layout_toEndOf="@+id/counter"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/listwarname"
        android:id="@+id/warAlliance_list"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:background="@android:color/transparent"
        android:textSize="40dp"
        android:layout_alignTop="@+id/warName_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="1"
        android:id="@+id/counter"
        android:singleLine="false"
        android:textSize="70dp"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:gravity="top|center_vertical|center|fill_vertical|clip_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gend"
        android:id="@+id/Gen"
        android:background="@android:color/transparent"
        android:layout_below="@+id/warName_list"
        android:layout_alignLeft="@+id/warName_list"
        android:layout_alignStart="@+id/warName_list"
        android:layout_marginTop="8dp" />

</RelativeLayout>